[2018-08-08 11:30:43 +0200]  Use yay as AUR helper                                                      karasu      {415a686d}
[2018-07-11 00:53:17 +0200]  Forgot these two                                                           karasu      {5cefd815}
[2018-07-11 00:51:55 +0200]  Add documentation (sphinx)                                                 karasu      {03cb064b}
[2018-06-24 02:07:42 +0200]  zd1211-firmware has been removed from arch core                            karasu      {624f39f0}
[2018-05-24 17:34:00 +0200]  Fixes #885 (unharmful)                                                     karasu      {d3d1cd08}
[2018-05-17 15:20:22 +0200]  Add eventbox also to detect when the camera feed is clicked on             karasu      {77c26b1b}
[2018-05-17 14:49:34 +0200]  Add copyright notice                                                       karasu      {0b9d058d}
[2018-05-17 14:45:05 +0200]  Disable webcam in user_info (we need to store an avatar image from ..      karasu      {7c3556bc}
[2018-05-17 14:38:33 +0200]  gocryptfs module interface seems to work. Now we need cnchi to setu..      karasu      {970eb687}
[2018-05-14 10:52:49 +0200]  Playing with gocryptfs                                                     karasu      {07486718}
[2018-05-12 14:09:40 +0200]  Will use cryfs instead of encfs (encfs part was not really finished)       karasu      {c6e3370a}
[2018-05-12 14:07:38 +0200]  Some methods should be functions                                           karasu      {e8e823c2}
[2018-05-12 13:49:58 +0200]  Moved code into several functions                                          karasu      {cf0abc82}
[2018-05-12 13:23:54 +0200]  Remove white spaces                                                        karasu      {a54de3a0}
[2018-05-12 13:21:39 +0200]  Small changes                                                              karasu      {bdce8457}