@@ -1,3 +1,4 @@
+[2018-08-17 15:12:41 +0200]  Do not use meta packages (temporary)                                       karasu      {dda0ae16}
 [2018-08-08 11:30:43 +0200]  Use yay as AUR helper                                                      karasu      {415a686d}
 [2018-07-11 00:53:17 +0200]  Forgot these two                                                           karasu      {5cefd815}
 [2018-07-11 00:51:55 +0200]  Add documentation (sphinx)                                                 karasu      {03cb064b}
